# usagestat

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  README.md
.github/workflows/: release.yml
crates/ai-usage-cli/: Cargo.toml
crates/ai-usage-cli/src/: auth_cookies.rs  batch_probe.rs  history.rs  main.rs
crates/ai-usage-core/: Cargo.toml
crates/ai-usage-core/src/: cache.rs  config.rs  lib.rs  manifest.rs  model.rs  normalized.rs  paths.rs
crates/ai-usage-daemon/: Cargo.toml
crates/ai-usage-daemon/src/: dashboard.html  main.rs
crates/ai-usage-plugins/: Cargo.toml
crates/ai-usage-plugins/src/: ccusage.rs  host_api.rs  lib.rs  loader.rs  runtime.rs
docs/: cli.md  distribution.md  gnome-extension.md
packaging/aur/usagestat-bin/: PKGBUILD
packaging/homebrew/Formula/: usagestat.rb
packaging/rpm/: usagestat.spec
plugins/abacus-ai/: plugin.js  plugin.json
plugins/alibaba/: plugin.js  plugin.json
plugins/alibaba-token-plan/: plugin.js  plugin.json
plugins/amp/: plugin.json
plugins/antigravity/: plugin.js  plugin.json
plugins/augment/: plugin.js  plugin.json
plugins/aws-bedrock/: plugin.js  plugin.json
plugins/azure-openai/: plugin.js  plugin.json
plugins/claude/: plugin.js  plugin.json
plugins/codebuff/: plugin.js  plugin.json
plugins/codex/: plugin.js  plugin.json
plugins/command-code/: plugin.js  plugin.json
plugins/copilot/: plugin.js  plugin.json
plugins/crof/: plugin.js  plugin.json
plugins/cursor/: plugin.js  plugin.json
plugins/deepgram/: plugin.js  plugin.json
plugins/deepseek/: plugin.js  plugin.json
plugins/doubao/: plugin.js  plugin.json
plugins/droid/: plugin.js  plugin.json
plugins/elevenlabs/: plugin.js  plugin.json
plugins/factory/: plugin.json
plugins/gemini/: plugin.js  plugin.json
plugins/grok/: plugin.js  plugin.json
plugins/groqcloud/: plugin.js  plugin.json
plugins/host-smoke/: plugin.js
plugins/jetbrains-ai-assistant/: plugin.json
plugins/kilo/: plugin.js  plugin.json
plugins/kimi/: plugin.json
plugins/kimi-k2/: plugin.js  plugin.json
plugins/kiro/: plugin.json
plugins/llm-proxy/: plugin.js  plugin.json
plugins/manus/: plugin.js  plugin.json
plugins/mimo/: plugin.js  plugin.json
plugins/minimax/: plugin.json
plugins/mistral/: plugin.js  plugin.json
plugins/mock/: plugin.js  plugin.json
plugins/moonshot/: plugin.js  plugin.json
plugins/nanogpt/: plugin.js  plugin.json
plugins/ollama/: plugin.js  plugin.json
plugins/openai-api/: plugin.js  plugin.json
plugins/opencode/: plugin.js  plugin.json
plugins/opencode-go/: plugin.json
plugins/openrouter/: plugin.js  plugin.json
plugins/perplexity/: plugin.js  plugin.json
plugins/stepfun/: plugin.js  plugin.json
plugins/synthetic/: plugin.js  plugin.json
plugins/t3chat/: plugin.js  plugin.json
plugins/venice/: plugin.js  plugin.json
plugins/vertex-ai/: plugin.js  plugin.json
plugins/warp/: plugin.js  plugin.json
plugins/windsurf/: plugin.js  plugin.json
plugins/zai/: plugin.json
scripts/: install-dev.sh
templates/dev-providers/host-smoke/: plugin.js  plugin.json
templates/dev-providers/mock/: plugin.js  plugin.json
templates/provider-plugin/: README.md  plugin.js  plugin.json
tools/: dev-install.sh
tools/publish/docker/: arch-aur.Dockerfile  fedora-copr.Dockerfile  ubuntu-ppa.Dockerfile
tools/publish/scripts/: aur-check.sh  copr-build.sh  docker-build.sh  docker-run.sh  local-deb-build.sh  local-release-build.sh  local-rpm-build.sh  ppa-shell.sh
