[workspace]
resolver = "2"
members = [
    "crates/ai-usage-core",
    "crates/ai-usage-plugins",
    "crates/ai-usage-cli",
    "crates/ai-usage-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.13", features = ["blocking", "json", "socks"] }
rquickjs = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
tabled = { version = "0.17", features = ["std"] }
thiserror = "2"
toml = "0.8"
