[package]
name = "ai-usage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ai-usage"
path = "src/main.rs"

[dependencies]
ai-usage-core = { path = "../ai-usage-core" }
ai-usage-plugins = { path = "../ai-usage-plugins" }
anyhow.workspace = true
aes.workspace = true
cbc.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
pbkdf2.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
signal-hook.workspace = true
tabled.workspace = true
