[package]
name = "usagestat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scriptable CLI for local agent usage data"
repository = "https://github.com/Hashim-K/usagestat"
homepage = "https://github.com/Hashim-K/usagestat"
readme = "../../README.md"

[[bin]]
name = "usagestat"
path = "src/main.rs"

[dependencies]
usagestat-core = { path = "../ai-usage-core" }
usagestat-plugins = { path = "../ai-usage-plugins" }
anyhow.workspace = true
aes.workspace = true
cbc.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
pbkdf2.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
signal-hook.workspace = true
tabled.workspace = true

[package.metadata.deb]
name = "usagestat"
maintainer = "Hashim-K <Hashim-K@users.noreply.github.com>"
copyright = "2026, Hashim-K"
license-file = ["../../LICENSE", "0"]
extended-description = "usagestat is a scriptable CLI for probing and exporting local agent usage data."
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/usagestat", "usr/bin/", "755"],
    ["../../plugins/**/*", "usr/share/usagestat/plugins/", "644"],
]
