[package]
name = "usagestat-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usagestat_core"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
