[package]
name = "ai-usage-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ai-usage-daemon"
path = "src/main.rs"

[dependencies]
ai-usage-core = { path = "../ai-usage-core" }
ai-usage-plugins = { path = "../ai-usage-plugins" }
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
