[package]
name = "usagestat-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "usagestatd"
path = "src/main.rs"

[dependencies]
usagestat-core = { path = "../ai-usage-core" }
usagestat-plugins = { path = "../ai-usage-plugins" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
