[package]
name = "usagestat-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "usagestat_plugins"
path = "src/lib.rs"

[dependencies]
usagestat-core = { path = "../ai-usage-core" }
anyhow.workspace = true
chrono.workspace = true
log.workspace = true
reqwest.workspace = true
rquickjs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
